--- a/rmcontest/rmcontest/templates/problem1.html
+++ b/rmcontest/rmcontest/templates/problem1.html
@@ -1,9 +1,9 @@
 {% extends "problem.html" %}
 {% block description %}
 <div class=description>
-Summer decided to become a CS major in college, in the hopes of one day making an AI that can be smarter than Rick. However, before she can do all that, she's got a lot of work that she's got to do this semester. She'd rather be researching the optimization and parallelization of zeta-tree operations, but alas, her homework calls. 
+Summer decided to become a CS major in college, in the hopes of one day making an AI that can be smarter than Rick. However, before she can do all that, she's got a lot of work that she's got to do this semester. She'd rather be researching the optimization and parallelization of <hlr>zeta-tree operations</hlr>, but alas, her homework calls. 
 <p>
-Luckily for her, its not much harder than reasoning about improving state of the art data structures. Ahem... that is, luckily for you. She hands you her assignment:
+Luckily for her, its not much harder than reasoning about improving state of the art data structures. Ahem... that is, luckily for <i>you</i>. She hands you her assignment:
 
 <p>
 Given a <a href={{input_file}}>balanced string of brackets</a>, what is the maximum nesting depth found within the string?
