--- a/rmcontest/rmcontest/templates/problem7.html
+++ b/rmcontest/rmcontest/templates/problem7.html
@@ -1,11 +1,17 @@
-{% extends "index.html" %}
+{% extends "problem.html" %}
 {% block body %}
 <div class=description>
 <p>
-"Peace among worlds &lt;<b>buurrrrppp</b>&gt;", says Rick, fingers in the air, as he stumbles through the town square of the capital of the main world of his car battery's microverse (damn thing won't start again). He is greeted boorishly by Zeep, whom filled with ire, has waited patiently for the day Rick would dare step foot in his home again. "You no longer have power here, asshole!", Zeep shouts. He reaches into his pocket and presses a big red button on a remote, activating a strange dark monolith erected in the center of the square. The world starts to shake violently, tremors becoming more turbulent with each passing moment. Right when it seems all is about to collapse - all becomes still, and all becomes silent. Rick is unphased the whole time, until this very moment - something is different. In a frantic, time slows to a crawl. He reaches for his portal gun as fast as his alcoholic limbs will allow him, but he knows he won't be fast enough, for Zeep and his brethren have already fired all of their guns right at him. He has no choice but to fire the portal gun at himself, from inside of his pocket, knowing that there's a 96% chance that it will kill him. He pulls the trigger just in time, gets hurled through dimensions of time and space, and lands softly on a large butt. He should have seen this coming.
+"Peace among worlds &lt;<hlgr><b>buurrrrppp</b></hlgr>&gt;", says Rick, fingers in the air, as he stumbles through the town square of the capital of the main world of his car battery's microverse (damn thing won't start again). He is greeted boorishly by Zeep, whom filled with <hlr>ire</hlr>, has waited patiently for the day Rick would dare step foot in his home again. "You no longer have power here, asshole!", Zeep shouts. He reaches into his pocket and presses a big red button on a remote, activating a strange dark monolith erected in the center of the square. 
+<p>
+The world starts to shake violently, tremors becoming more turbulent with each passing moment. Right when it seems all is about to collapse - all becomes still, and all becomes silent. Rick is unphased the whole time, until this very moment - something is different. In a frantic, time slows to a crawl. He reaches for his portal gun as fast as his alcoholic limbs will allow him, but he knows he won't be fast enough, for Zeep and his brethren have already <i>fired all of their guns right at him</i>. 
+<p>
+He has no choice but to fire the portal gun at himself, from <i>inside</i> of his pocket, knowing that there's a 96% chance that it will kill him. He pulls the trigger just in time, gets hurled through dimensions of time and space, and lands softly on a large butt. He should have seen this coming.
 </p>
 <p>
-For a few moments after a universe dies, its "slot" in the space-time continuum is vacant. Since there are an infinite number of universes, there are also an infinite number dying at any given moment. Zeep's device took advantage of this, and transferred his universe from its previous slot (inside Rick's battery), to that of some previously existing (but independent) universe. Only a universe with a zlanp property in its cosmic signature can be switched out from one slot to another.
+<hr>
+<p>
+For a few moments after a universe dies, its "slot" in the space-time continuum is vacant. Since there are an infinite number of universes, there are also an infinite number dying at any given moment. Zeep's device took advantage of this, and transferred his universe from its previous slot (inside Rick's battery), to that of some previously existing (but independent) universe. Only a universe with a <hlg>zlanp</hlg> property in its cosmic signature can be switched out from one slot to another.
 </p>
 
 <p>
@@ -13,11 +19,11 @@ For a few moments after a universe dies, its "slot" in the space-time continuum 
 </p>
 
 <p>
-Luckily, Rick has 329 replacement car batteries. However, he doesn't want the same thing to happen again. How many of his batteries do NOT have the zlanp property in their cosmic signatures?
+Luckily, Rick has <hlb>50</hlb> replacement car batteries. However, he doesn't want the same thing to happen again. How many of his 50 batteries do NOT have the <hlp>zlanp</hlp> property in their cosmic signatures?
 </p>
 
 <p>
-The cosmic signature read-outs show the distribution of zloonp zones. The read-outs are represented by a two-dimensional grid of dashes ("-") signifying no energy, and hashtags ("#") for zloonp zones. A cosmic signature has the zlanp property only if there are four or more contiguous zloonp zones of at least size 5. A zone is contiguous with those directly above, below, to the left, and to the right of it (no diagonals).
+The cosmic signature read-outs show the distribution of <hlb>zloonp</hlb> zones. The read-outs are represented by a two-dimensional grid of dashes ("<hlgr>-</hlgr>") signifying no energy, and hashtags ("<hlgr>#</hlgr>") for zloonp zones. A cosmic signature has the <hlp>zlanp</hlp> property only if there are four or more contiguous zloonp zones of at least size 5. A zone is contiguous with those directly above, below, to the left, and to the right of it (no diagonals).
 </p>
 <blockquote><pre><code><div class=code>
   --#----#---
@@ -31,7 +37,7 @@ The cosmic signature read-outs show the distribution of zloonp zones. The read-o
   #---####---
   -----##----
   </div></code></pre></blockquote>
-  - has five zloonp zones, only three of them of at least size 5. Does NOT have zlanp property.
+  - has five <hlb>zloonp</hlb> zones, only three of them of at least size 5. Does NOT have zlanp property.
 
 
 <blockquote><pre><code><div class=code>
@@ -47,22 +53,8 @@ The cosmic signature read-outs show the distribution of zloonp zones. The read-o
   -------------#-
   </div></code></pre></blockquote>
 
-  - has six zloonp zones, with four of them of at least size 5. Does have zlanp property.
+  - has six <hlb>zloonp</hlb> zones, with four of them of at least size 5. Does have zlanp property.
 
-<blockquote><pre><code><div class=code>
-  ---------------------------#
-  ----------------------------
-  ---------------#------------
-  ----------------------------
-  ----------------#-----------
-  ---------#------------------
-  -----#----------------------
-  -----##---------------#-----
-  ----------------------------
-  ----------------------------
-
-</div></code></pre></blockquote>
-  - has 6 zloonp zones, all of them smaller than size 5. Does NOT have zlanp property.
 
 <br>
 <br>
@@ -70,20 +62,22 @@ The cosmic signature read-outs show the distribution of zloonp zones. The read-o
 <br>
 
 <p>
-Here is a list of the cosmic readout signatures for the miniverses in Rick's 329 car batteries: <a href="{{input_file}}">Cosmic Signatures</a>. Each signature is prepended by its width and height.
+Here is a <a href={{input_file}}>list of the cosmic readout signatures</a> for the miniverses in Rick's 50 car batteries. Each signature is prepended by its width and height.
 </p>
 
-How many of his batteries do NOT have the zlanp property in their cosmic signatures (i.e. how many can he safely use)?
-
-
-<form action="{{ url_for('process_answer') }}" method='post'>
-  <br>
-  <input type="hidden" name="problem_num" value="3">
-  Answer: <input type="text" name="answer"> <input type="submit" value="Submit">
-  
-</form> 
+How many of his batteries do NOT have the <hlp>zlanp</hlp> property in their cosmic signatures (i.e. how many can he safely use)?
 
 <br>
 
 </div>
+{% endblock %}
+{% block answer_form %}
+{{ super() }}
+{% endblock %}
+{% block hint %}
+<br>
+<div style="color:#102080">(Hint: DFS)</div>
+<br>
+<br>
+<br>
 {% endblock %}
