--- a/rmcontest/rmcontest/templates/problems.html
+++ b/rmcontest/rmcontest/templates/problems.html
@@ -1,6 +1,7 @@
 {% extends "index.html" %}
 
 {% block body %}
+	{% if incomplete_problems|length > 0 %}
 	<div class=h2i><center><u>Incomplete Problems</u></center></div>
 	<div class=problems_list>
 		<div class=uncompleted_problems_list>
@@ -15,6 +16,7 @@
 	    	</ul>
     	</div>
 	</div>
+	{% endif %}
 
 <br><br><br>
 
