--- a/rmcontest/rmcontest/templates/problem1.html
+++ b/rmcontest/rmcontest/templates/problem1.html
@@ -1,4 +1,7 @@
 {% extends "problem.html" %}
+{% block body %}
+{{ super() }}
+{% endblock %}
 {% block description %}
 <div class=description>
 Summer decided to become a CS major in college, in the hopes of one day making an AI that can be smarter than Rick. However, before she can do all that, she's got a lot of work that she's got to do this semester. She'd rather be researching the optimization and parallelization of <hlr>zeta-tree operations</hlr>, but alas, her homework calls. 
