--- a/rmcontest/rmcontest/templates/problem7.html
+++ b/rmcontest/rmcontest/templates/problem7.html
@@ -1,5 +1,6 @@
 {% extends "problem.html" %}
-{% block body %}
+
+{% block description %}
 <div class=description>
 <p>
 "Peace among worlds &lt;<hlgr><b>buurrrrppp</b></hlgr>&gt;", says Rick, fingers in the air, as he stumbles through the town square of the capital of the main world of his car battery's microverse (damn thing won't start again). He is greeted boorishly by Zeep, whom filled with <hlr>ire</hlr>, has waited patiently for the day Rick would dare step foot in his home again. "You no longer have power here, asshole!", Zeep shouts. He reaches into his pocket and presses a big red button on a remote, activating a strange dark monolith erected in the center of the square. 
