--- a/rmcontest/rmcontest/static/style.css
+++ b/rmcontest/rmcontest/static/style.css
@@ -1,11 +1,78 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400');
 
 
+.timer {
+    height: 85%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: FranklinGothic, Verdana, Arial, sans-serif;
+    font-size: 120px;
+    font-weight: bold;
+    color: #80c371;
+}
+
+table {
+  margin: auto;
+  border: 2px solid white;
+  border-collapse: collapse;
+
+}
+
+tr {
+  border: 1px solid white;
+  width: 600px;
+  font-family: 'Courier', sans-serif;
+  font-size: 22px;
+
+
+}
+
+th {
+  border: 1px solid white;
+  width: 200px;
+  height: 30px;
+  align-content: center;  
+  
+  
+}
+
+th.inc a {
+  text-decoration: none;
+  text-shadow: 0px 0px 20px #ff0000;
+  color : #ecd0d0;
+}
+
+th.inc a:visited {
+  color: #c07080;
+}
+
+
+
+th.com a {
+  text-shadow: 0px 0px 20px #00ff00;
+  color: #b0d0a0;
+}
+
+th.com a:visited {
+  text-decoration: none;
+  color: #70c080;
+}
+
+
 h2 {
   font-family: 'Source Code Pro', sans-serif;
   display: block;
   font-size: 26px;
   text-shadow: 0px 0px 20px #ff0000;
+  text-align: center;
 }
 
 div.h2c {
@@ -79,13 +146,6 @@ hlgr {
 }
 
 
-.navbar {
-  font-family: 'Source Code Pro', sans-serif;
-  text-shadow: 0px 0px 15px #25c497;
-  font-size: 16px;
-  color: white;
-}
-
 .problems_list {
   font-family: 'Source Code Pro', sans-serif;
   display: block;
@@ -122,6 +182,13 @@ div.problems_list li a:hover {
     background-color: #111;
 }
 
+.navbar {
+  font-family: 'Source Code Pro', sans-serif;
+  text-shadow: 0px 0px 15px #25c497;
+  font-size: 16px;
+  color: white;
+}
+
 
 div.navbar ul{
     list-style-type: none;
@@ -136,6 +203,15 @@ div.navbar li {
     
 }
 
+div.navbar li:last-child {
+  float: right;
+  margin-right: 1%
+}
+
+div.navbar li:last-child a {
+  color: #2564df;
+}
+
 div.navbar li a {
     display: block;
     text-align: center;
@@ -147,6 +223,10 @@ div.navbar li a {
 div.navbar li a:hover {
     background-color: #111;
 }
+
+
+
+
 
 
 /*#02030a;*/
