Added the image

--- a/rmcontest/rmcontest/templates/problem4.html
+++ b/rmcontest/rmcontest/templates/problem4.html
@@ -7,7 +7,7 @@ The contraption flies around the living room and shoots silly string to form a p
 <p>
 Rick tells Summer that to find the code, you must first find the path from the <hlb>root</hlb> of the tree <hlb>to the leaf</hlb> "<hlp>LOL</hlp>". If you then form a string by <hlb>joining</hlb> the name of each node from the root to the end (inclusive), the code is formed by <hlb>taking every 4th letter</hlb>. For example, take the following tree:
 <p>
-<img src="/static/images/rick.jpg">
+<img src="/static/images/prob4_diagram.png">
 <p>
 If the target node was "<hlg>JKL</hlg>", then the path string would be "<hlg>ABCGHITUVJKL</hlg>", then the code would be "<hlg>AHV</hlg>".
 
